# tilemap_manager

./: CMakeLists.txt  README.md  main.cpp
gui/: Button.cpp  Button.hpp  Menu.cpp  Menu.hpp  Textbox.cpp  Textbox.hpp
loader/: Settings.cpp  Settings.hpp
src/: Builder.cpp  Builder.hpp  TextManager.cpp  TextManager.hpp  Tilemap.cpp  Tilemap.hpp
